Add new FailurePolicyAction that restarts failed Jobs
